rls1.4-htx1 - manage population definition

--- a/MakeGeneration.ipynb
+++ b/MakeGeneration.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,114 +218,17 @@
     "    for i, sol in enumerate(solutions):\n",
     "        sumLATENCY = sum(sol.iloc[1].reset_index(drop=True).tolist())\n",
     "        sumEC = sum(sol.iloc[2].reset_index(drop=True).tolist())\n",
-    "        dfSols = pd.concat([dfSols, pd.DataFrame({f'Parent_{i}': [sumLATENCY, sumEC]})], axis=1)    \n",
+    "        dfSols = pd.concat([dfSols, pd.DataFrame({f'Population_{i}': [i, sumLATENCY, sumEC]})], axis=1)    \n",
     "    return dfSols"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data are stored within the following Folder → Generation_27\n",
-      "Data are stored within the following Folder → Generation_28\n",
-      "Data are stored within the following Folder → Generation_29\n",
-      "Data are stored within the following Folder → Generation_30\n",
-      "Data are stored within the following Folder → Generation_31\n",
-      "Data are stored within the following Folder → Generation_32\n",
-      "Data are stored within the following Folder → Generation_33\n",
-      "Data are stored within the following Folder → Generation_34\n",
-      "Data are stored within the following Folder → Generation_35\n",
-      "Data are stored within the following Folder → Generation_36\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Parent_0</th>\n",
-       "      <th>Parent_1</th>\n",
-       "      <th>Parent_2</th>\n",
-       "      <th>Parent_3</th>\n",
-       "      <th>Parent_4</th>\n",
-       "      <th>Parent_5</th>\n",
-       "      <th>Parent_6</th>\n",
-       "      <th>Parent_7</th>\n",
-       "      <th>Parent_8</th>\n",
-       "      <th>Parent_9</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>29.636702</td>\n",
-       "      <td>33.315312</td>\n",
-       "      <td>28.757482</td>\n",
-       "      <td>20.780078</td>\n",
-       "      <td>53.249580</td>\n",
-       "      <td>22.803893</td>\n",
-       "      <td>30.559173</td>\n",
-       "      <td>48.95358</td>\n",
-       "      <td>38.027432</td>\n",
-       "      <td>24.131796</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>104915.113813</td>\n",
-       "      <td>78796.293480</td>\n",
-       "      <td>91519.072093</td>\n",
-       "      <td>98083.007225</td>\n",
-       "      <td>156779.611467</td>\n",
-       "      <td>121955.774110</td>\n",
-       "      <td>135432.717318</td>\n",
-       "      <td>191199.51864</td>\n",
-       "      <td>98832.137120</td>\n",
-       "      <td>129431.731707</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Parent_0      Parent_1      Parent_2      Parent_3       Parent_4  \\\n",
-       "0      29.636702     33.315312     28.757482     20.780078      53.249580   \n",
-       "1  104915.113813  78796.293480  91519.072093  98083.007225  156779.611467   \n",
-       "\n",
-       "        Parent_5       Parent_6      Parent_7      Parent_8       Parent_9  \n",
-       "0      22.803893      30.559173      48.95358     38.027432      24.131796  \n",
-       "1  121955.774110  135432.717318  191199.51864  98832.137120  129431.731707  "
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ls_Solutions = []\n",
-    "nSol = 10\n",
-    "for _ in range(nSol):\n",
+    "def getPopulations(nPop=10):\n",
     "    n_IoTs = 20\n",
     "    FOG_nNodes = 5\n",
     "    CLOUD_nNodes = 3\n",
@@ -334,11 +237,29 @@
     "    CLOUD_rDist = ((100, 500), (100, 500))\n",
     "    FOG_rVMS = (2, 6)\n",
     "    CLOUD_rVMS = (2,3)\n",
-    "    baseVMS, taskVM, taskVM_Dummy, taskVM_Transp = prepareOffloading_V2(n_IoTs, FOG_nNodes, CLOUD_nNodes, IoT_rDist, FOG_rDist, CLOUD_rDist, FOG_rVMS, CLOUD_rVMS)   \n",
-    "    ls_Solutions.append(taskVM)\n",
-    "\n",
-    "\n",
-    "getTotal_fromParentsSolutions(ls_Solutions)"
+    "    \n",
+    "    ls_Solutions = []\n",
+    "    ls_Solutions_Dummy = []\n",
+    "    for _ in range(nPop):\n",
+    "        _, taskVM, taskVM_Dummy, _ = prepareOffloading_V2(n_IoTs, FOG_nNodes, CLOUD_nNodes, IoT_rDist, FOG_rDist, CLOUD_rDist, FOG_rVMS, CLOUD_rVMS, False)   \n",
+    "        \n",
+    "        # We do not take into account the locally executed tasks\n",
+    "        taskVM_Dummy = taskVM_Dummy.loc[:, ~(taskVM_Dummy == -1).any()]\n",
+    "        taskVM = taskVM[list(taskVM_Dummy)]\n",
+    "        \n",
+    "        ls_Solutions.append(taskVM)\n",
+    "        ls_Solutions_Dummy.append(taskVM_Dummy)\n",
+    "    \n",
+    "    return ls_Solutions, ls_Solutions_Dummy, getTotal_fromParentsSolutions(ls_Solutions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol, sol_dum, sol_total = getPopulations(10)"
    ]
   }
  ],
